# nix-godot

./: .gitignore  flake.nix  result
.github/workflows/: cachix.yml
.std/cache/77/: 775a0e835a40e668007ebc46675112fff33214fc584c45a7509dd08b08f267f6-a
.std/cache/88/: 882a3be29f27c85915df1c59ee11a22522e8859c351949f2623554559f564475-d
.std/cache/b5/: b58db226589053c0d0ac00f5daf0e4d2f3b6aa583ddb94e523d2d3a91a77022e-d
.std/cache/c1/: c1e3fb01db3b3ab1d9dd7e99df15f16952ab2449d76d619ddaef51913b44c844-d
godot/: 4.nix
nix/godot/: lib.nix  packages.nix
nix/godot-cpp/: cmake-install.patch  godot-cpp.pc  lib.nix  packages.nix
nix/godot4/: lib.nix  packages.nix
nix/outputs/: packages.nix
test/: CMakeLists.txt
test/godot-cpp-test/: CMakeLists.txt  example.gdextension.in
